// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persistent versions of the notifications work 1`] = `
<ToastNotification
  persistent={true}
  title="Info"
  type="negative"
>
  <GenericNotification
    persistent={true}
    style="toast"
    title="Info"
    type="negative"
  >
    <div
      className="notification negative toast fading"
    >
      <div
        className="icon"
      >
        <Icon
          icon={null}
          inheritSize={true}
          role="presentation"
        >
          <svg
            aria-hidden={true}
            className="icon inheritSize"
            focusable="false"
            role="presentation"
            viewBox="viewBox"
          >
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </div>
      <div
        className="textContainer"
      >
        <span
          className="title"
        >
          Info
        </span>
        <span
          className="textWrapper"
        >
          <span
            className="text"
          >
            Currently processing...
          </span>
        </span>
      </div>
    </div>
  </GenericNotification>
</ToastNotification>
`;

exports[`The basic notification renders correctly 1`] = `
<ToastNotification
  title="Success!"
  type="positive"
>
  <GenericNotification
    style="toast"
    title="Success!"
    type="positive"
  >
    <div
      className="notification positive toast fading"
    >
      <div
        className="icon"
      >
        <Icon
          icon={null}
          inheritSize={true}
          role="presentation"
        >
          <svg
            aria-hidden={true}
            className="icon inheritSize"
            focusable="false"
            role="presentation"
            viewBox="viewBox"
          >
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </div>
      <div
        className="textContainer"
      >
        <span
          className="title"
        >
          Success!
        </span>
        <span
          className="textWrapper"
        >
          <span
            className="text"
          >
            It worked!
          </span>
        </span>
      </div>
      <span
        className="cancel"
        onClick={[Function]}
      >
        <span
          className="cancelInner"
        >
          <Icon
            icon={null}
            inheritSize={true}
            role="img"
            title="close notification"
          >
            <svg
              aria-labelledby="id-2-title"
              className="icon inheritSize"
              focusable="false"
              role="img"
              viewBox="viewBox"
            >
              <title
                id="id-2-title"
              >
                close notification
              </title>
              <use
                xlinkHref="#id"
              />
            </svg>
          </Icon>
        </span>
      </span>
    </div>
  </GenericNotification>
</ToastNotification>
`;
